...
        @State private var selectedCategory: Category?

        var body: some View {
            NavigationView {
                Form {
                    Section(header: Text("Budget Details")) {
                        TextField("Budget Name", text: self.$name).accessibilityLabel("Text Field")
                        TextField("Budget Amount", text: self.$limitAmount).accessibilityLabel(
                            "Text Field"
                        )
                        #if os(iOS)
                        .keyboardType(.decimalPad)
                        #endif
                    }
...
